web-infras/parser/tests/fixtures/esprima/es2017/async/functions/invalid-export-async-function-expression/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export async function() {}
 |^
[SyntaxError]: function statement requires a name (1,22)
1|export async function() {}
 |                    ^
